1.3alpha2 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented #15220: Implement renderer for blockquote elements.


1.3alpha1 - Tuesday 01 September 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed #15198: ezcDocumentPdf cannot be constructed without pecl/haru.
- Fixed #15258: Unusable ezcDocumentPdf::loadString() implementation.
- Implemented #15188: Add support for text colors in drivers.
- Implemented #15189: Add support for background colors in drivers.
- Implemented #15190: Add support for text-decoration in drivers.
- Implemented #15191: Implement renderer for literalblock elements.
- Implemented #15192: Implement renderer for bullet list elements.
- Implemented #15193: Implement renderer for enumeration list elements.
- Implemented #15194: Implement renderer for definition list elements.
- Implemented #15195: Implement renderer for external link elements.
- Implemented #15196: Implement renderer for internal link elements and link
  targets.
- Implemented: Support for borders and background colors.


1.2.1 - Monday 27 July 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed various smaller bugs in XHtml parsing.


1.2 - Monday 29 June 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed: Handling of internal links in wiki writer.
- Fixed: Registering of custom node class does sometimes not work on existing
  documents.
- Fixed: Overlapping text on widdow backtracking
- Fixed: Do not introduce spaces before punctuation on inline markup.


1.2rc1 - Monday 22 June 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.2beta1 - Monday 08 June 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed: Invalid font creation in haru driver.